[package]
name = "halo2_code"
version = "0.1.0-dev"
edition = "2021"
keywords = ["zk-snark", "plonk", "halo2"]


[dependencies]
rand_core = { version = "0.6", features = ["getrandom"] }
halo2_proofs = { version = "0.3.0", default-features = false }
pasta_curves = "0.5"
ff = "0.13"
group = "0.13"
# Developer tooling dependencies
plotters = { version = "0.3.0", optional = true }
tabbycat = { version = "0.1", features = ["attributes"], optional = true }


[dev-dependencies]
rand_core = { version = "0.6", default-features = false, features = [
    "getrandom",
] }


[features]
dev-graph = [
    "halo2_proofs/dev-graph",
    "plotters",
    "plotters/bitmap_backend",
    "plotters/bitmap_encoder",
]
